--- a/paper.bib
+++ b/paper.bib
@@ -1,3 +1,13 @@
+@misc{coullon2021efficient,
+      title={Efficient and Generalizable Tuning Strategies for Stochastic Gradient MCMC},
+      author={Jeremie Coullon and Leah South and Christopher Nemeth},
+      year={2021},
+      eprint={2105.13059},
+      archivePrefix={arXiv},
+      primaryClass={stat.CO}
+}
+
+
 @article{Pearson:2017,
   	url = {http://adsabs.harvard.edu/abs/2017arXiv170304627P},
   	Archiveprefix = {arXiv},
